fixed contact section spacing

--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ p{
 
 #lnlogo{
   margin-top: 15px;
-  margin-right: 20px;
+  margin-right: 75px;
 height: 75px;
 width: 75px;
 background-image: url(/img/LI-In-Bug.png);
@@ -342,7 +342,7 @@ background-size: cover;
 }
 #mail-logo{
   margin-top: 15px;
-  margin-right: 20px;
+  margin-right: 75px;
 height: 75px;
 width: 75px;
 background-image: url(/img/mail.png);
@@ -453,5 +453,11 @@ background-size: cover;
     background-image: url('/img/skatecrop.png');
     background-position-x: -300px;
     
+  }
+  #lnlogo{
+    margin-right: 25px;
+  }
+  #mail-logo{
+    margin-right: 25px;
   }
 }
